@@ -1,45 +1,8 @@
-/*
- * Copyright 2013 MovingBlocks
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *  http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Engine tests are split out due to otherwise quirky project dependency issues with module tests extending engine tests
 
-/*
- * This is a Gradle build file:
- * - Gradle Homepage: http://gradle.org/
- * - Gradle Documentation: http://gradle.org/documentation
- * - View tasks for this project: $ gradlew tasks
- */
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'checkstyle'
-
-import groovy.json.JsonSlurper
-import org.apache.tools.ant.filters.FixCrLfFilter
-
-import java.text.SimpleDateFormat;
-
-// Declare remote repositories we're interested in - library files will be fetched from here
-repositories {
-    // Main Maven repo
-    mavenCentral()
-    // MovingBlocks Artifactory instance for libs not readily available elsewhere
-    maven {
-        url "http://www.movingblocks.net:8081/artifactory/repo"
-    }
-}
+// Grab all the common stuff like plugins to use, artifact repositories, code analysis config
+apply from: "$rootDir/config/gradle/common.gradle"
+apply from: "$rootDir/config/gradle/artifactory.gradle"
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Java Section                                                                                                      //
@@ -54,6 +17,13 @@ sourceSets {
         }
     }
 }
+
+// Base the engine tests on the same version number as the engine
+version = project(':engine').version
+println "ENGINE TESTS VERSION: $version"
+
+// Jenkins-Artifactory integration catches on to this as part of the Maven-type descriptor
+group = 'org.terasology.engine'
 
 // Primary dependencies definition
 dependencies {
@@ -70,39 +40,35 @@ dependencies {
     testRuntime group: 'org.codehaus.groovy', name: 'groovy', version: '2.1.7'
 }
 
-// Instructions for packaging a jar file for the engine
+// Instructions for packaging a jar file for the engine tests
 jar {
     duplicatesStrategy = 'exclude'
 
-    // Just copying test stuff, which isn't included by default
+    // Copy in test stuff, which isn't included by default
     from sourceSets.test.output
 }
 
-task distEngineTests (type: Sync) {
-    description = "Prepares the engine's tests for distribution (so later unit tests can extend utility classes)"
-    into ("$rootDir/engine/build/distributions/engine-tests")
-    from jar
+// A configuration for publishing artifacts
+configurations {
+    published
 }
 
-// Extra details provided for unit tests
-test {
-    dependsOn rootProject.extractNatives
+// Define the artifacts we want to publish (the .pom will also be included since the Maven plugin is active)
+artifacts {
+    published jar
+    published sourceJar
+    published javadocJar
+}
 
-    // ignoreFailures: Specifies whether the build should break when the verifications performed by this task fail.
-    ignoreFailures = true
-
-    // showStandardStreams: makes the standard streams (err and out) visible at console when running tests
-    testLogging.showStandardStreams = true
-
-    // Arguments to include while running tests
-    jvmArgs '-Xms512m', '-Xmx1024m', '-XX:MaxPermSize=128m'
+// Technically the plain "jar" both here and above is included automatically, but leaving it explicit for clarity
+artifactoryPublish {
+    dependsOn jar, sourceJar, javadocJar
 }
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // General IDE customization                                                                                         //
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-// For IntelliJ add a bunch of excluded directories. Or not so much a bunch in the engine version of this
 idea {
     module {
         // Change around the output a bit
@@ -110,15 +76,4 @@ idea {
         outputDir = file('build/classes')
         testOutputDir = file('build/testClasses')
     }
-}
-
-checkstyle {
-    ignoreFailures = true
-    configFile = new File(rootDir, 'config/checkstyle/checkstyle.xml')
-    configProperties.samedir = checkstyle.configFile.parentFile
-}
-
-pmd {
-    ignoreFailures = true
-    ruleSetFiles = files("config/pmd/pmd.xml")
 }
